slick model周り刈り込みっと

--- a/src/main/resources/wannamysql.conf
+++ b/src/main/resources/wannamysql.conf
@@ -6,7 +6,7 @@ mysql {
 
   db {
     url = "jdbc:mysql://localhost/wanna"
-    driver = "com.mysql.jdbc.Driver"
+    driver = "com.mysql.cj.jdbc.Driver"
     user = "user"
     user = ${?MYSQL_DB_USER}
     password = "password"
