コメントの追加

--- a/src/main/resources/wannamysql.conf
+++ b/src/main/resources/wannamysql.conf
@@ -8,8 +8,10 @@ mysql {
     url = "jdbc:mysql://localhost/wanna"
     driver = "com.mysql.cj.jdbc.Driver"
     user = "user"
+    // 環境変数'MYSQL_DB_USER'にてuserを定義してあげてください
     user = ${?MYSQL_DB_USER}
     password = "password"
+    // 環境変数'MYSQL_DB_PASSWORD'にてpasswordを定義してあげてください
     password = ${?MYSQL_DB_PASSWORD}
     // connectionPoolは妥当なものがあればそれを指定してあげたい
     connectionPool = "disabled"
